<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/off_white">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                style="@style/defaultLinearForm">

                <!-- Username -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <EditText
                        android:hint="Username"
                        android:inputType="textAutoComplete"
                        android:ems="10"
                        android:id="@+id/username"
                        android:layout_gravity="center_horizontal"
                        android:maxLength="25"
                        style="@style/inputWithIcon"/>
                    <IconTextView
                        android:text="{fa-user}"
                        style="@style/inputIcon" />
                </RelativeLayout>

                <!-- First Name -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="First Name"
                        android:ems="10"
                        android:id="@+id/firstName"
                        android:maxLength="100"
                        style="@style/inputWithIcon"/>
                    <IconTextView
                        android:text="{fa-user}"
                        style="@style/inputIcon" />
                </RelativeLayout>

                <!-- Surname -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="Surname"
                        android:ems="10"
                        android:id="@+id/surname"
                        android:maxLength="100"
                        style="@style/inputWithIcon"/>
                    <IconTextView
                        android:text="{fa-user}"
                        style="@style/inputIcon" />
                </RelativeLayout>

                <!-- Date of Birth -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:ems="10"
                        android:id="@+id/dob"
                        android:hint="DOB"
                        style="@style/inputWithIcon" />
                    <IconTextView
                        android:text="{fa-calendar}"
                        style="@style/inputIcon" />
                </RelativeLayout>

                <!-- Gender -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/gender"
                        android:entries="@array/gender"
                        android:prompt="@string/genderPopup"
                        android:spinnerMode="dialog"
                        style="@style/spinnerWithIcon"/>
                    <IconTextView
                        android:id="@+id/genderIcon"
                        android:text="{fa-male}"
                        style="@style/inputIcon" />
                </RelativeLayout>

                <!-- Account Type -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/accountType"
                        android:entries="@array/accountType"
                        android:prompt="@string/accountTypePopup"
                        android:spinnerMode="dialog"
                        style="@style/spinnerWithIcon"/>
                    <IconTextView
                        android:id="@+id/accountTypeIcon"
                        android:text="{fa-user}"
                        style="@style/inputIcon"/>
                </RelativeLayout>

                <!-- Email -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/email"
                        android:hint="Email"
                        android:maxLength="100"
                        style="@style/inputWithIcon"/>
                    <IconTextView
                        android:text="{fa-at}"
                        style="@style/inputIcon" />
                </RelativeLayout>

                <!-- Password -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/password"
                        android:hint="Password"
                        android:maxLength="255"
                        style="@style/inputWithIcon"/>
                    <IconTextView
                        android:text="{fa-lock}"
                        style="@style/inputIcon" />
                </RelativeLayout>

                <!-- Confirm Password -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/confirmPassword"
                        android:hint="Confirm Password"
                        android:maxLength="255"
                        style="@style/inputWithIcon"/>
                    <IconTextView
                        android:text="{fa-lock}"
                        style="@style/inputIcon" />
                </RelativeLayout>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:text="I accept the terms and conditions"
                    android:id="@+id/tsandcs"
                    android:checked="false" />
            </LinearLayout>
            <Button
                android:text="@string/register"
                android:id="@+id/register"
                android:layout_marginTop="35dp"
                style="@style/defaultConfirmButton" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>